# gnosis

./: Cargo.toml  build.rs
proto/: gnosis_raft.proto
src/: election.rs  main.rs  node.rs  raft.rs
